fixed overflow proplem

--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .mobile {
